--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
             });
         };
     </script>
+    <style>
+        body { background-color: #000; margin: 0;}
+        canvas {position: absolute; top:50%; left: 50%; transform: translate(-50%, -50%);}
+    </style>
 </head>
 <body>
 </body>
